--- a/resource/web/event_detail.tmpl
+++ b/resource/web/event_detail.tmpl
@@ -7,6 +7,10 @@
             <table class="table table-hover table-condensed">
                 <thead>
                 <tr>
+                    <th class="text-right">Event ID:</th>
+                    <th>{{event.getId()}}</th>
+                </tr>
+                <tr>
                     <th class="text-right">Name:</th>
                     <th>{{event.getName()}}</th>
                 </tr>
