--- a/resource/web/sensor_detail.tmpl
+++ b/resource/web/sensor_detail.tmpl
@@ -18,6 +18,10 @@
                 <table class="table table-hover table-condensed">
                     <thead>
                     <tr>
+                        <th class="text-right">Sensor ID:</th>
+                        <th>{{sensor.getId()}}</th>
+                    </tr>
+                    <tr>
                         <th class="text-right">Name:</th>
                         <th>{{sensor.getName()}}</th>
                     </tr>
