Made title bold

--- a/resource/web/trigger.tmpl
+++ b/resource/web/trigger.tmpl
@@ -13,7 +13,7 @@
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
         <div class="panel-heading clearfix">
-            {{.getName()}}
+            <b>{{.getName()}}</b>
             <div class="pull-right">
                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal" style="padding: 1px 20px;"
                         data-target="#flowModal"
