--- a/resource/web/sensor_config.tmpl
+++ b/resource/web/sensor_config.tmpl
@@ -4,7 +4,7 @@
     <div class="panel panel-default drop-shadow">
         <div class="panel-heading">Local Sensors</div>
         <div class="panel-body">
-            <p>This is a local list of sensors connected to this node.</p>
+            <p>List of local sensors.</p>
 
             <table class="table table-hover table-condensed">
                 <thead>
