--- a/resource/web/sensor_config.tmpl
+++ b/resource/web/sensor_config.tmpl
@@ -32,6 +32,7 @@
                             <div class="btn-toolbar pull-right">
                                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal"
                                         data-target="#sensorModal"
+                                        data-action="modify_local_sensor"
                                         data-id="{{.getId()}}"
                                         data-name="{{.getName()}}"
                                         data-type="{{.getType()}}"
@@ -78,6 +79,7 @@
                         <div class="btn-toolbar pull-right">
                             <button type="button" class="btn btn-default btn-xs" data-toggle="modal"
                                     data-target="#sensorModal"
+                                    data-action="create_local_sensor"
                                     data-type="{{.getType()}}"
                                     {{#.getDeviceConfigurator().getConfiguration()}}
                                     data-{{.getName()}}="{{.getString()}}"
@@ -129,6 +131,7 @@
                             <div class="btn-toolbar pull-right">
                                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal"
                                         data-target="#userModal"
+                                        data-action="modify_external_user"
                                         data-id="{{.getId()}}"
                                         data-hostname="{{.getHostname()}}"
                                         data-port="{{.getPort()}}">
