Added clear detected events button

--- a/resource/web/sensor_config.tmpl
+++ b/resource/web/sensor_config.tmpl
@@ -61,6 +61,7 @@
                 <th>Type</th>
                 <th>Date</th>
                 <th>Data</th>
+                <th>Configuration</th>
                 <th>
                     <form method="POST">
                         <button type="submit" class="btn btn-danger btn-xs pull-right" name="action" value="remove_all_detected_sensors">
