--- a/resource/web/event_config.tmpl
+++ b/resource/web/event_config.tmpl
@@ -59,6 +59,13 @@
                 <th>Date</th>
                 <th>Data</th>
                 <th>Configuration</th>
+                <th>
+                    <form method="POST">
+                        <button type="submit" class="btn btn-danger btn-xs pull-right" name="action" value="remove_all_detected_events">
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </button>
+                    </form>
+                </th>
                 </thead>
                 {{#detectedEvents}}
                 <tr>
