--- a/resource/web/event_overview.tmpl
+++ b/resource/web/event_overview.tmpl
@@ -22,7 +22,7 @@
                     <td>
                         <form method="POST">
                             <input type="hidden" name="action" value="modify">
-                            <input type="hidden" name="id" value="{{.getId()}}">
+                            <input type="hidden" name="action_id" value="{{.getId()}}">
 
                             <div class="btn-toolbar pull-right">
                                 <input class="toggle-switch" type="checkbox" name="enabled"
