Fixed event details page state switch

--- a/resource/web/event_detail.tmpl
+++ b/resource/web/event_detail.tmpl
@@ -28,7 +28,7 @@
                     <td>
                         <form method="POST">
                             <input type="hidden" name="action" value="modify">
-                            <input type="hidden" name="action_id" value="{{.getId()}}">
+                            <input type="hidden" name="action_id" value="{{event.getId()}}">
 
                             <div class="btn-toolbar pull-left">
                                 <input class="toggle-switch" type="checkbox" name="enabled"
