Added plugin page for viewing plugin information

--- a/resource/web/property_config.tmpl
+++ b/resource/web/property_config.tmpl
@@ -1,4 +1,4 @@
-<h1 class="page-header">Event Overview</h1>
+<h1 class="page-header">Hal Properties</h1>
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
