Moved the smaller plugins to separate folders.

--- a/resource/web/property_config.tmpl
+++ b/resource/web/property_config.tmpl
@@ -2,7 +2,7 @@
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
-        <div class="panel-heading">Local Events</div>
+        <div class="panel-heading">Registered properties</div>
         <div class="panel-body">
 
             <table class="table table-hover table-condensed">
