--- a/hal-core/resource/resource/web/plugin_config.tmpl
+++ b/hal-core/resource/resource/web/plugin_config.tmpl
@@ -8,13 +8,15 @@
             <table class="table table-hover table-condensed">
                 <thead>
                     <th class="col-md-3">Name</th>
-                    <th class="col-md-8">Version</th>
+                    <th class="col-md-1">Version</th>
+                    <th class="col-md-7">Description</th>
                     <th class="col-md-1 text-right">Actions</th>
                 </thead>
                 {{#plugins}}
                 <tr>
                     <td>{{.getName()}}</td>
                     <td>{{.getVersion()}}</td>
+                    <td>{{.getDescription()}}</td>
                     <td>
                         <form method="POST">
                             <input type="hidden" name="action" value="modify">
