--- a/hal-core/resource/resource/web/plugin_config.tmpl
+++ b/hal-core/resource/resource/web/plugin_config.tmpl
@@ -10,7 +10,7 @@
                     <th class="col-md-3">Name</th>
                     <th class="col-md-1">Version</th>
                     <th class="col-md-7">Description</th>
-                    <th class="col-md-1 text-right">Actions</th>
+                    <th class="col-md-1 text-right">Enable</th>
                 </thead>
                 {{#plugins}}
                 <tr>
